[tool.poetry]
name = "mptreasury"
version = "0.1.0"
description = ""
authors = ["crpier42 <crpier42@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.4.2"
icecream = "^2.1.3"
loguru = "^0.7.2"
tqdm = "^4.66.1"
result = "^0.13.1"
black = "^23.10.1"
mypy = "^1.6.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
