[tool.poetry]
name = "mptreasury"
version = "0.1.0"
description = ""
authors = ["crpier <crpier42@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fuzzywuzzy = "^0.18.0"
mutagen = "^1.45.1"
click = "^8.1.3"
boto3 = "^1.24.84"
deflacue = "^2.0.1"
cueparser = "^1.0.0"
pydantic = "^2.4.2"
sqlalchemy = "^2.0.22"
sqlalchemy2-stubs = "^0.0.2a35"
alembic = "^1.12.0"
python3-discogs-client = "^2.7"
icecream = "^2.1.3"
result = "^0.13.1"
loguru = "^0.7.2"
pyyaml = "^6.0.1"
pydantic-settings = "^2.0.3"
levenshtein = "^0.23.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.6.1"
pytest = "^7.4.2"
isort = "^5.12.0"
black = "^23.10.1"
ruff = "^0.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
markers = [
  "unit: self explanatory I think",
  "component: self explanatory I think",
  "e2e: self explanatory I think",
]

